remaking the flashcard system, pushing to gh so i can access on desktop

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,11 @@
 <body>
 
     <div class="main-content">
+        <p id="prompt-area">"test"</p>
         <div class="flashcard" id="flashcard">
             <p class="text-area" id="text-area"></p>
         </div>
+        <button onclick="get_previous_question()">Previous</button>
         <button onclick="get_next_question()">Next</button>
     </div>
 </body>
