--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,19 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js" type="module" defer></script>
+    <script src="js/flashcard.js" type="module" defer></script>
+    <script src="js/menus.js" type="module" defer></script>
+    <script src="js/themes.js" type="module" defer></script>
     <link href="./style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c400fd927b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <div class="main-content">
-        <p id="prompt-area">"test"</p>
-        <div class="flashcard" id="flashcard">
-            <p class="text-area" id="text-area"></p>
+    <div id="blur-when-menus-open">
+        <navbar class="navbar">
+            <button class="navbar-button">
+                <i class="fa-solid fa-circle-info icon"></i>
+            </button>
+            <button class="navbar-button" onclick="open_settings()">
+                <i class="fa-solid fa-gear icon"></i>
+            </button class="navbar-button">
+            <a href="https://github.com/Cloudiz1/AQT-practice-site" target="_blank">
+                <i class="fa-brands fa-github icon"></i>
+            </a>
+        </navbar>
+    
+        <div class="main-content">
+            <div class="prompt-area-div">
+                <p id="prompt-area"></p>
+            </div>
+            <div class="flashcard" id="flashcard">
+                <p class="text-area" id="text-area"></p>
+            </div>
+    
+            <button onclick="get_previous_question()" class="button previous-button">
+                <i class="fa-solid fa-chevron-left button-icon"></i>
+            </button>
+            <button onclick="get_next_question()" class="button next-button">
+                <i class="fa-solid fa-chevron-right button-icon"></i>
+            </button>
         </div>
-        <button onclick="get_previous_question()">Previous</button>
-        <button onclick="get_next_question()">Next</button>
+    </div>
+
+    <div class="menu settings-menu" id="settings-menu">
+        <button class="close-button navbar-button" onclick="close_settings()">
+            <i class="fa-solid fa-x icon"></i>
+        </button>
+        <h1 class="settings-title">Settings</h2>
+
+        <h2 class="settings-heading">Filters: </h2>
+        <div class="settings-div">
+            <p>Not currently implemented.</p>
+        </div>
+
+        <h2 class="settings-heading">Themes: </h2>
+        <div class="theme-buttons-div" id="theme-buttons-div">
+        </div>
+
+        <h2 class="settings-heading">Theme mode: </h2>
+        <div class="theme-mode-div">
+            <button class="theme-button"></button>
+            <button class="theme-button"></button>
+        </div>
     </div>
 </body>
 </html>
